consertando o erro na imagem

--- a/indexb.html
+++ b/indexb.html
@@ -17,7 +17,7 @@
             <div class="group">
                 <img src="./img/instagram-logo.png" class="instagram-logo" alt="Instagram logo">
                 <div class="profile-photo">
-                    <img src="./img/perfil-instagram.jpg" alt="Profile photo">
+                    <img src="./img/perfil-instagram.png" alt="Profile photo">
                 </div>
                 <a href="#" class="instagram-login">Continue as Bredbk</a>
                 <a href="#" class="instagram-logout">Remove Account</a>
