colocando link nas imagens

--- a/indexb.html
+++ b/indexb.html
@@ -15,11 +15,14 @@
         </div>
         <div class="instagram-continue">
             <div class="group">
-                <img src="./img/instagram-logo.png" class="instagram-logo" alt="Instagram logo">
+                <a href="https://www.instagram.com" target="_blank">
+                    <img src="./img/instagram-logo.png" class="instagram-logo" alt="Instagram logo">
+
+                </a> 
                 <div class="profile-photo">
                     <img src="./img/perfil-instagram.png" alt="Profile photo">
                 </div>
-                <a href="#" class="instagram-login">Continue as Bredbk</a>
+                <a href="https://www.instagram.com/brendon.s.lima/" target="_blank" class="instagram-login">Continue as Bredbk</a>
                 <a href="#" class="instagram-logout">Remove Account</a>
             </div>
             <div class="group">
@@ -27,15 +30,15 @@
                 <p class="not-account"> 
                     <span class="link-blue">Switch Accounts</span>
                     or
-                    <span class="link-blue">Join</span>
+                    <a href="https://www.instagram.com/accounts/emailsignup/?hl=pt-br" target="_blank" class="link-blue">Join</a>
                 </p>
             </div>
             <div class="get-the-app">
                 <p class="get-app">Download</p>
 
                 <div class="download">
-                    <a href="#" class="app-download"></a>
-                    <a href="#" class="app-download"></a>
+                    <a href="https://apps.apple.com/br/app/instagram/id389801252" target="_blank" class="app-download"></a>
+                    <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=en&gl=US" target="_blank" class="app-download"></a>
                 </div>
             </div>
         </div>
